--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "ed25519-hd-key": "^1.3.0",
+    "framer-motion": "^12.4.2",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
